--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "bootstrap-sass": "^3.0.0",
     "component-bind": "^1.0.0",
     "gulp-install": "^0.6.0",
+    "gulp-sass": "^2.2.0",
+    "gulp-sourcemaps": "^1.6.0",
     "has-binary": "^0.1.7",
     "indexof": "0.0.1",
     "laravel-elixir": "^3.0.0",
     "laravel-elixir-compass": "git://github.com/rynocouse/laravel-elixir-compass.git",
     "mime-db": "^1.21.0",
+    "node-sass": "^3.4.2",
     "to-array": "^0.1.4"
   }
 }
