--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "private": true,
   "devDependencies": {
-    "gulp": "^3.8.8"
+    "gulp": "^3.8.8",
+    "node-neat": "^1.7.2"
   },
   "dependencies": {
     "backo2": "^1.0.2",
     "bootstrap-sass": "^3.0.0",
+    "bourbon": "^4.2.6",
     "component-bind": "^1.0.0",
     "gulp-install": "^0.6.0",
     "gulp-sass": "^2.2.0",
